playing around with styling, moved index into html file no real advantage over having it as js having it as js allows you to hot-reload as well

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,17 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Goals Tracker</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+    <link rel="stylesheet" href="App.css">
 </head>
 <body>
 <div id="container"></div>
+<script src="../node_modules/react/dist/react.js"></script>
+<script src="../node_modules/react-dom/dist/react-dom.js"></script>
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+<script type="text/babel" src="Counter.js"></script>
+<script type="text/babel" src="App.js"></script>
 <script type="text/babel" src="index.js"></script>
 </body>
 </html>
